--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Training_data.pkl filter=lfs diff=lfs merge=lfs -text
 Training_data.p filter=lfs diff=lfs merge=lfs -text
+Training_data.pklz filter=lfs diff=lfs merge=lfs -text
